--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,28 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+body{
+    height: 100vh;
+    margin: 0px;
     padding: 0;
-}
-
-nav {
-    background-color: #333;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    overflow: hidden;
+    background-color: rgb(20, 20, 20);
+    align-items: center;
+    justify-content: center;
     display: flex;
-    justify-content: space-around;
-}
 
-nav li {
-    margin: 0;
-    padding: 0;
 }
-
-nav a {
-    text-decoration: none;
+#projects > .image{
+    width: 40vmin;
+    height: 56vmin;
+    object-fit: cover;
+    object-position: center;
+}
+#projects{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+.project_cards{
+    background-color: rgba(255, 255, 255, 0.1);
     color: white;
-    padding: 10px 20px;
-    display: block;
-    transition: background-color 0.3s ease;
-}
-
-nav a:hover {
-    background-color: #555;
+    height: 260px;
+    width: 300px;
 }
