--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body{
     height: 100vh;
     width: 100vw;
-    margin: 0rem;
+    /* margin: 0rem; */
     overflow: hidden;
     background-color: rgb(20, 20, 20);
 }
-#image-track > .image{
+/* #image-track > .image{
     width: 40vmin;
     height: 56vmin;
     object-fit: cover;
@@ -18,4 +18,12 @@ body{
     left: 50%;
     top: 50%;
     transform: translate(0%, -50%);
+} */
+h1{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    color: rgb(104, 102, 102);
 }
