--- a/style/style.css
+++ b/style/style.css
@@ -106,7 +106,7 @@ body {
   /* align-items: center; */
 }
 .containerLoad {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,7 +114,7 @@ body {
 }
 
 .load {
-  min-width: 100vw;
+  min-width: 100dvw;
 }
 
 .fullScreen:hover {
@@ -437,11 +437,43 @@ p {
   .start,
   .skills,
   .contact {
-    display: flex;
+    /* display: flex; */
     width: 80% !important;
     justify-content: center;
     position: relative;
-    top: -85px;
+    top: -50px !important;
+  }
+
+  .skillItem{
+    height: 220px !important;
+  }
+  .grid {
+    grid-template-columns: repeat(2, 1fr) !important;
+    grid-gap: 0.6rem !important;
+  }
+  .gi1 {
+    grid-area: 1 / 1 / 2 / 3 !important;
+  }
+  .gi2 {
+    grid-area: 2 / 1 / 3 / 3 !important;
+  }
+  .gi3 {
+    grid-area: 3 / 1 / 4 / 2 !important;
+  }
+  .gi4 {
+    grid-area: 3 / 2 / 4 / 3 !important;
+  }
+  .gi5 {
+    grid-area: 4 / 1 / 5 / 3 !important;
+  }
+  .gi6 {
+    grid-area: 5 / 1 / 6 / 2 !important;
+  }
+  .gi7 {
+    grid-area: 5 / 2 / 6 / 3 !important;
+  }
+  .gi8 {
+    grid-area: 6 / 1 / 7 / 3 !important;
   }
 }
 
@@ -457,16 +489,34 @@ p {
     width: 100%;
   }
 
+  .skillItem{
+    height: 150px !important;
+  }
   .start,
   .skills,
   .contact {
-    display: flex;
-    width: 100% !important;
+    /* display: flex; */
+    width: 80% !important;
     justify-content: center;
     position: relative;
     top: -125px;
     /* margin-top: -50px; */
     /* align-items: center;*/
+  }
+  .start{
+    margin-bottom: -50%;
+    top: -110px !important;
+  }
+  .skills{
+    top: -150px !important;
+  }
+  .contact{
+    top: -270px !important;
+    margin-bottom: -200px !important;
+  }
+  .footer{
+    top: 65px !important;
+    padding: 0px 50px !important;
   }
 }
 /* #custom-cursor {
